# mbed-os-app-version

./: CMakeLists.txt  mbed_lib.json
src/: averVersion.c  averVersion.h
tools/: averUserVersion.h  genVersion.py
